# easyenclave

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_AND_BILLING.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.ee-cp  Dockerfile.smoke-admin  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SETUP_FRESH.md  TODO.md  alembic.ini  build.rs  docker-compose.yml  pyproject.toml  requirements.txt  tingly-weaving-pond.md  whimsical-wandering-galaxy.md
.github/: CODEOWNERS  SECRETS_SETUP.md  actionlint.yaml  dependabot.yml
alembic/: env.py
ansible/: README.md  ansible.cfg
app/: __init__.py  attestation.py  auth.py  billing.py  cloudflare.py  crud.py  database.py  db_models.py  gcp_capacity.py  ita.py  ita_mint.py  main.py  models.py  nonce.py  oauth.py  pricing.py  provisioner.py  proxy.py  routes_admin_cloud.py  routes_auth_billing.py  routes_misc.py  settings.py  source_inspector.py  storage.py  version_measurement.py
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  deployment.rs  error.rs  lib.rs  main.rs  registration.rs  server.rs  tunnel.rs
crates/aggregator/: Cargo.toml
crates/aggregator/src/: config.rs  cp_client.rs  error.rs  lib.rs  main.rs  measurement.rs  proxy.rs  registry.rs  scraper.rs  server.rs
crates/aggregator/src/billing/: marketplace.rs  mod.rs  revenue.rs  settlement.rs  types.rs
crates/aggregator/src/billing/provider/: btcpay.rs  mod.rs  stub.rs
crates/attestation/: Cargo.toml
crates/attestation/src/: error.rs  ita.rs  lib.rs  mrtd.rs  tdx.rs
crates/cp/: Cargo.toml
crates/cp/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  proxy.rs  releases.rs  scraper.rs  server.rs
crates/cp/static/: index.html
crates/cp/tests/: integration.rs
crates/easyenclave/: Cargo.toml
crates/easyenclave/src/: lib.rs
crates/easyenclave/src/attestation/: ita.rs
crates/easyenclave/src/common/: error.rs  lib.rs  pricing.rs  types.rs
crates/easyenclave/src/cp/routes/: accounts.rs  agents.rs  auth.rs  deploy.rs  health.rs
crates/easyenclave/src/cp/services/: tunnel.rs
crates/easyenclave/src/cp/stores/: agent.rs  deployment.rs
crates/easyenclave/tests/: billing_policy_env.rs
crates/ee/: Cargo.toml
crates/ee-agent/: Cargo.toml
crates/ee-agent/src/: attestation.rs  config.rs  logs.rs  main.rs  mode_agent.rs  mode_cp.rs  registration.rs  server.rs  tunnel.rs  workload.rs
crates/ee-attestation/: Cargo.toml
crates/ee-attestation/src/: ita.rs  tsm.rs
crates/ee-common/: Cargo.toml
crates/ee-common/src/: api.rs  billing_policy.rs  config.rs  error.rs  lib.rs  pricing.rs  types.rs
crates/ee-common/tests/: billing_policy_env.rs
crates/ee-cp/: Cargo.toml
crates/ee-cp/migrations/: 0001_init.sql  0002_accounts_github_owner_unique.sql  0002_agent_health_checks.sql  0003_deployments_auth_method.sql
crates/ee-cp/src/: attestation.rs  background.rs  db.rs  github_oidc.rs  lib.rs  main.rs  mrtd.rs  nonce.rs  ownership.rs  state.rs  tunnel.rs
crates/ee-cp/src/auth/: admin_session.rs  api_key.rs
crates/ee-cp/src/routes/: accounts.rs  admin.rs  agents.rs  apps.rs  auth.rs  deploy.rs  mod.rs  stats.rs  ui.rs  ui_root.html
crates/ee-cp/src/services/: attestation.rs  gcp.rs  github_oidc.rs  health_monitor.rs  mod.rs  nonce.rs  tunnel.rs
crates/ee-cp/src/stores/: account.rs  agent.rs  deployment.rs  mod.rs  session.rs  setting.rs
crates/ee/migrations/: 0001_init.sql
crates/ee/src/: lib.rs  state.rs
crates/ee/src/agent_runtime/: measure.rs  mod.rs
crates/ee/src/agent_runtime/oci/: mod.rs
crates/ee/src/routes/: auth.rs  deploy.rs  health.rs
crates/ee/src/stores/: account.rs  agent.rs  health.rs
crates/hostd/: Cargo.toml
crates/hostd/src/: config.rs  error.rs  images.rs  lib.rs  main.rs  resources.rs  server.rs  vm.rs
docs/: ARCHITECTURE.md  CAPACITY_LAUNCHER.md  CI_CD_NETWORKS.md  CNAME  FAQ.md  GITHUB_OAUTH.md  NONCE_CHALLENGE.md  REPRODUCIBLE_BUILDS.md  REWRITE_SPEC_GO_AGENT.md  app.js  config.js  deploy-v2-plan.md  easydollar-whitepaper.md  enclave-test-matrix.md  gpu-attestation.md  index.html  private-claude.md  security-attestation-model.md  tdx-cloud-verification.md
examples/: README.md  deploy-with-github-oidc.yml
image/: Dockerfile  Makefile  assemble-disk.sh  build.sh  ci-smoke-boot.sh  ci-tdx-smoke-azure.sh  ci-tdx-smoke-gcp.sh  ci-tdx-smoke-llm-cuda-runner.sh  ci-tdx-smoke-llm-cuda.sh  ci-tdx-smoke-local-tdx-qcow2-runner.sh  ci-tdx-smoke-local-tdx-qcow2.sh  ci-tdx-smoke-local-tdx-runner.sh  ci-tdx-smoke-local-tdx.sh  ci-test-vendor-lib.sh  mkimage.sh  mkinitrd.sh  mkosi.conf  mkosi.finalize  mkosi.postinst.chroot  run-local-tdx.sh  run-local.sh  supervisord.conf  test-local.sh
infra/: README.md  __init__.py  build_image.sh  customize.sh  launcher.py  tdx_cli.py
migrations/: 0001_init.sql  001_add_auth_and_billing.py  002_add_tcb_status.py  003_add_github_owner.py  (+2 more)
v2/: Cargo.toml  README.md  go.mod
v2/api/openapi/: agent-control.yaml  control-plane.yaml
v2/cmd/agent/: main.go
v2/cmd/control-plane/: main.go
v2/cmd/eectl/: main.go
v2/cmd/installer/: main.go
v2/crates/agent/: Cargo.toml
v2/crates/agent/src/: lib.rs  main.rs
v2/crates/aggregator/: Cargo.toml
v2/crates/aggregator/src/: lib.rs  main.rs
v2/crates/attestation/: Cargo.toml
v2/crates/attestation/src/: lib.rs
v2/crates/common/: Cargo.toml
v2/crates/common/src/: api.rs  lib.rs
v2/crates/cp/: Cargo.toml
v2/crates/cp/src/: lib.rs  main.rs
v2/crates/devbox/: Cargo.toml
v2/crates/devbox/src/: main.rs
v2/crates/devbox/tests/: full_lifecycle.rs
v2/crates/hostd/: Cargo.toml
v2/crates/hostd/src/: lib.rs  main.rs
v2/internal/agent/app/: app.go  app_test.go  handlers.go
v2/internal/agent/config/: load.go  load_test.go  runtime.go  runtime_test.go
v2/internal/controlplane/app/: app.go  app_test.go  handlers.go
v2/internal/eectl/root/: root.go  root_test.go
v2/internal/installer/host/: install.go  install_test.go
v2/internal/shared/tdxquote/: parse.go  parse_test.go
v2/internal/shared/version/: version.go
v2/migrations/: README.md
v2/tools/: README.md  codegen.sh
(+345 files in other folders)
