[project]
name = "easyenclave"
version = "0.1.0"
description = "Confidential discovery service for TDX-attested applications"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
tdx = "infra.tdx_cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (valid for FastAPI Query/Path/etc)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "sdk", "infra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
