[package]
name = "ee-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ee-agent"
path = "src/main.rs"

[dependencies]
ee-common = { workspace = true }
ee-attestation = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
bollard = { workspace = true }
futures-util = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
