[package]
name = "ee-aggregator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ee-aggregator"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
ee-common = { workspace = true }
ee-attestation = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
hex = "0.4"
hmac = { workspace = true }
sha2 = { workspace = true }
