[package]
name = "ee-attestation"
version.workspace = true
edition.workspace = true

[dependencies]
ee-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
