[package]
name = "easyenclave"
version = "0.1.0"
edition = "2021"

[lib]
name = "easyenclave"
path = "src/lib.rs"

[[bin]]
name = "ee-cp"
path = "src/bin/ee-cp/main.rs"

[[bin]]
name = "ee-agent"
path = "src/bin/ee-agent/main.rs"

[[bin]]
name = "ee-ops"
path = "src/bin/ee-ops/main.rs"

[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bcrypt = "0.15"
bollard = "0.18"
chrono = { workspace = true }
futures-util = "0.3"
http = { workspace = true }
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { workspace = true }

[dev-dependencies]
mockito = "1"
tower = "0.5"
