[package]
name = "ee-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ee-attestation = { path = "../ee-attestation" }
ee-common = { path = "../ee-common" }
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
