[package]
name = "ee-attestation"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ee-common = { path = "../ee-common" }
base64.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
