[package]
name = "ee-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
ee-common = { path = "../ee-common" }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockito = "1"
