[package]
name = "ee-common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
