[package]
name = "ee-cp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ee-attestation = { path = "../ee-attestation" }
ee-common = { path = "../ee-common" }
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio.workspace = true

[[test]]
name = "cp_agent_e2e"
path = "../../tests/integration/cp_agent_e2e.rs"
