[package]
name = "ee-cp"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ee-attestation = { path = "../ee-attestation" }
ee-common = { path = "../ee-common" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
jsonwebtoken = "9"
mockito = "1"
tower = "0.5"
