[package]
name = "ee"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ee-attestation = { path = "../ee-attestation" }
ee-common = { path = "../ee-common" }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
futures-util = "0.3"
bollard = "0.18"

[dev-dependencies]
jsonwebtoken = "9"
mockito = "1"
tower = "0.5"
