[package]
name = "ee-hostd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ee-hostd"
path = "src/main.rs"

[dependencies]
ee-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
